k8s/keycloak/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notes-keycloak
spec:
  type: ClusterIP
  selector:
    app: notes-keycloak
  ports:
    - port: 8080
      targetPort: 8080
